Fix z-index issue

--- a/src/app/modules/newsfeed/feeds/feed-header/feed-type-popover/feed-type-popover.component.ng.scss
+++ b/src/app/modules/newsfeed/feeds/feed-header/feed-type-popover/feed-type-popover.component.ng.scss
@@ -4,7 +4,7 @@
   ::ng-deep .m-tooltip--bubble {
     width: 400px;
     right: -5px;
-    z-index: 45;
+    @include z-index(announcement);
   }
 
   .m-feedTypePopper {
